{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Mouse",
            "id": "eee6abcf-2999-4416-9728-ebdaf20e411e",
            "actions": [
                {
                    "name": "Delta",
                    "type": "Value",
                    "id": "15ca3dd3-08d0-4e98-aecb-697fcb207c2e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftButton",
                    "type": "Button",
                    "id": "07cf1000-84ec-4f71-8d9f-ebae833fb847",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "dedad9e6-3487-43ad-96d3-e50cc6cb6b24",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "709d92ae-d950-45d2-a9d8-a41c940d7309",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2deb3f59-d02e-4a12-b674-58ece872459d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "LeftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81ce92d0-42d1-4a86-b870-495374cab40c",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TouchScreen",
            "id": "5fd84b2b-63ec-41ed-a0a8-698f64bef4d4",
            "actions": [
                {
                    "name": "PrimaryTouchPressed",
                    "type": "Button",
                    "id": "59a2a8c9-6158-45f9-a0bd-77f6631db1f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryTouchDelta",
                    "type": "Value",
                    "id": "f9035d5f-ad20-41f0-98a7-17e3f6d49f72",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTouchPressed",
                    "type": "Button",
                    "id": "80242c03-8668-49bd-811b-57e229434b31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryTouchDelta",
                    "type": "Value",
                    "id": "45d5ee5d-d8b5-4456-b5fc-3754a4c4a1fa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5c288ac9-5b84-4f72-90f4-e30811255e38",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "SecondaryTouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "829bc0c4-c655-41be-9cde-3f7cb49bf727",
                    "path": "<Touchscreen>/touch1/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "SecondaryTouchPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c9cd335-397b-4cff-9a38-97d1cc522611",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "PrimaryTouchPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ce4927d-5859-4022-ae55-29ec1abfc1f8",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "PrimaryTouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Desktop",
            "bindingGroup": "Desktop",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}